# jx1_v2.0_auto

./: .gitignore  BUILD_INSTRUCTIONS.md  CHECKLIST.md  COMPLETE_SUMMARY.md  DETECT_DIRECTX.md  DOCUMENTATION_INDEX.md  PROJECT_STRUCTURE.md  README.md  RESEARCH_AGTOOL.md  SETUP_GUIDE.md  build.ps1  check_dependencies.ps1  clean.ps1  quickstart.ps1  run.ps1  setup.ps1
.claude/: config.json  settings.local.json
config/: game_info.json  memory_config.json
core_dll/: CMakeLists.txt  README.md
core_dll/src/: dllmain.cpp  main.cpp  main.h
core_dll/src/bot/: BotEngine.cpp  BotEngine.h  CombatBot.cpp  CombatBot.h  FarmingBot.cpp  FarmingBot.h  LootBot.cpp  LootBot.h  MacroSystem.h  PathFinder.cpp  PathFinder.h  QuestBot.cpp  QuestBot.h
core_dll/src/config/: ConfigUsageExample.cpp  MemoryConfig.cpp  MemoryConfig.h
core_dll/src/core/: ConfigManager.cpp  ConfigManager.h  HookManager.cpp  HookManager.h  IPCServer.cpp  IPCServer.h  Logger.cpp  Logger.h  MemoryManager.cpp  MemoryManager.h
core_dll/src/game/: BuffManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GameActions.cpp  GameActions.h  Inventory.cpp  Inventory.h  Player.cpp  Player.h  SkillManager.cpp  SkillManager.h
core_dll/src/hooks/: D3D9Hook.cpp  D3D9Hook.h  GameFunctionHooks.cpp  GameFunctionHooks.h  NetworkHook.cpp  NetworkHook.h
core_dll/src/network/: NetworkActions.cpp  NetworkActions.h  PacketBuilder.cpp  PacketHandler.cpp  PacketHandler.h  Packets.h
core_dll/src/overlay/: ESPRenderer.cpp  ESPRenderer.h  Menu.cpp  Menu.h  OverlayRenderer.cpp  OverlayRenderer.h
core_dll/src/utils/: Math.cpp  Math.h  Offsets.cpp  Offsets.h  Patterns.h
docs/: FEATURES_DOCUMENTATION.md  FEATURE_COMPARISON.md  MEMORY_CONFIG_VALIDATION.md  MULTI_ACCOUNT_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  SETUP_GUIDE_NO_VS.md  USER_GUIDE.md  X64_SUPPORT.md
docs/00-getting-started/: QUICK_START.md  README.md  WINDOWS_QUICK_START.md
docs/01-build/: COMMANDS.md  README.md  WINDOWS_BUILD_GUIDE.md
docs/02-architecture/: ARCHITECTURE_HOOK.md  PROJECT_SUMMARY.md  README.md
docs/03-reverse-engineering/: AFTER_SCAN_CONFIG.md  CENTRALIZED_CONFIG_GUIDE.md  CE_QUICK_REFERENCE.md  CHEAT_ENGINE_GUIDE.md  MEMORY_MAP.md  PHASE2_EXECUTION_GUIDE.md  PHASE2_INDEX.md  PHASE2_QUICKSTART.md  PHASE2_QUICK_REFERENCE.md  PHASE2_REVERSE_ENGINEERING.md  PHASE2_START_HERE.md  PHASE2_STATUS.md  PHASE2_VISUAL_GUIDE.md  README.md
docs/04-development/: CHECKLIST_HOOK.md  PHASE2_READY.md  README.md
docs/04-development/status/: PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_PROGRESS.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  README.md
docs/05-research/: README.md
docs/project-status/: FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  README.md
injector/: CMakeLists.txt  SimpleInjector.cpp
launcher/: .editorconfig  .gitignore  AUTO_LOGIN_GUIDE.md  App.xaml  App.xaml.cs  DESIGN_README.md  DESIGN_SYSTEM_SUMMARY.md  JX1Launcher.csproj  LAUNCHER_DESIGN.txt  LAUNCHER_REORGANIZATION.md  MULTI_ACCOUNT_COMPLETE.md  MULTI_ACCOUNT_IMPLEMENTATION_PLAN.md  README.md
launcher/Controls/: AccountCard.xaml  AccountCard.xaml.cs  AccountList.xaml  AccountList.xaml.cs
launcher/Converters/: NullToBooleanConverter.cs
launcher/Models/: AccountProfile.cs  AccountStats.cs  BotSettings.cs  Profile.cs  ServerInfo.cs
launcher/Services/: AccountManager.cs  AutoLoginService.cs  ConfigService.cs  InjectorService.cs  MemoryConfigValidator.cs  ProcessDetector.cs  ProfileManager.cs
launcher/ViewModels/: MainViewModel.cs
launcher/Views/: AddAccountDialog.xaml  AddAccountDialog.xaml.cs  ConfigErrorWindow.xaml  ConfigErrorWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
launcher/docs/: HOW_TO_TEST.md  MULTI_ACCOUNT_DESIGN.md  MULTI_ACCOUNT_FINAL.md  MULTI_ACCOUNT_QUICKSTART.md  QUICK_DESIGN_START.md  README.md
launcher/scripts/: apply_design.ps1  build.bat  build_and_run.bat  preview_design.ps1
launcher/themes/: README.md  dark_red_theme.txt  light_blue_theme.txt
scripts/: build.bat  build_injector.bat  clean.bat  setup_deps.ps1  verify_libs.ps1
tools/: AUTO_SCAN_README.md  AutoScanMemory.ps1  AutoScanMemory_v2.ps1  JX1_Template.CT  README.md  auto_scan.bat  auto_scan_memory.lua  validate_config.ps1
